opam-version: "0.1"
maintainer:   "Charles-Edouard Lecat (@clecat)"
license:      "ISC"
version:      "0.1"
authors: []
tags: []
build: [
  [ "dune" "subst"]
  [ "dune" "build" "-x" "esp32" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune" {build}
  "ocb-stubblr" {build}
  "cstruct-esp32"
  "ocaml-esp32"
  "esp32-idf-headers"
]
available: [ ocaml-version >= "4.06.0" ]
