opam-version: "0.1"
maintainer:   "Charles-Edouard Lecat (@clecat)"
license:      "ISC"
authors: []
tags: []
build: [ "jbuilder" "build" "-x" "esp32" "-p" "lcd"]

depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
  "ocb-stubblr" {build}
  "cstruct-esp32"
  "ocaml-esp32"
  "esp32-idf-headers"
]
available: [ ocaml-version >= "4.06.0" ]
